Text Content Update

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 								<section>
 									<header>
-										<h3>Statistics Canada Art</h3>
+										<h3>Statistics Canada Data Art</h3>
 										<p>This app creates visual art image based on newly updated various json data sets from Statistics Canada every morning and save its collections. Javascript API call and Javascript Visual Graphic Code</p>
 									</header>
 									<div class="content">
