index text content update

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 									<span>San Francisco /  NYC / Vanouver</span>
 								</li>
 								<li>
-									<h3><a target="_blank" href="#">Check my resume</a></h3>
+									<!-- <h3><a target="_blank" href="#">Check my resume</a></h3> -->
 									<ul class="icons">
 										<li>LinkedIn <a target="_blank" href="https://www.linkedin.com/in/justinklee215/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li>GitHub <a target="_blank" href="https://github.com/DevNeoLee" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
