Update main photo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I care about clean and efficient coding. It will increase performance of the products and shift your projects on the right gear.
 							When I am not working I would spend my time with my lovely family and also exploring streets and corners somewhere on the planet.
 							</p>
-							<span class="image main"><img src="images/pic5.jpg" alt="" /></span>
+							<span class="image main"><img src="images/pic5.JPG" alt="myself_in_India" /></span>
 						</div>
 					</section>
 
