link address update

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 									</header>
 									<div class="content">
 										<div class="site_frame">
-											<a href="https://secure-brook-64571.herokuapp.com/" target="_blank"><img src="images/travelpin2.gif" alt="travelpin_screenshot" style="width: 600px; " /></a>
+											<a href="https://travel-pin.herokuapp.com/" target="_blank"><img src="images/travelpin2.gif" alt="travelpin_screenshot" style="width: 600px; " /></a>
 										</div>
-										<div><a href="https://secure-brook-64571.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
+										<div><a href="https://travel-pin.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
 										<div>
 											<a href="https://github.com/DevNeoLee/TravelPin" target="_blank"><strong><p>GitHub Repository</p></strong></a>
 										</div>
