update link on third project

--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 
 								<section>
 									<header>
-										<h3>Statistics Canada Data Art</h3>
-										<p>This app creates visual art image based on newly updated various json data sets from Statistics Canada every morning and save its collections. Javascript API call and Javascript Visual Graphic Code</p>
+										<h3>Visualization of Visitors to Canada</h3>
+										<p>This app creates data visualization based on json data sets from Statistics Canada Javascript API call and D3.js</p>
 									</header>
 									<div class="content">
 										<div class="#">
 											<a href="" class="#"><img src="images/api_data_art2.jpg" alt="api_data_art_example" style="width: 600px"/></a>
 										</div>
-										<div><a href="" target="_blank">
-											<strong><p>Live Site(under construction)</p></strong></a></div>
+										<div><a href="https://devneolee.github.io/dataVisualization3/" target="_blank">
+											<strong><p>Live Site</p></strong></a></div>
 										<div>
-											<a href="" target="_blank">
-											<strong><p>GitHub Repository(under construction)</p></strong></a>
+											<a href="https://github.com/DevNeoLee/dataVisualization3" target="_blank">
+											<strong><p>GitHub Repository</p></strong></a>
 										</div>
 									</div>
 								</section>
