--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
 								<li><span class="iconify solid feature-icons" data-icon="logos:react" data-inline="false"></span>React</li>
 								<li><span class="iconify solid feature-icons" data-icon="logos:redux" data-inline="false"></span>Redux</li>
 								<li><span class="iconify solid feature-icons" data-icon="mdi:language-ruby-on-rails" data-inline="false"></span>Ruby on Rails</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:firebase" data-inline="false"></span>Firebase</li>
+								<li><span class="iconify solid feature-icons" data-icon="logos:d3" data-inline="false"></span>D3</li>
 								<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby</li>
 								<li><span class="iconify solid feather-icons" data-icon="logos:postgresql" data-inline="false"></span>PostgreSQL</li>
 								<li><span class="iconify solid feather-icons" data-icon="logos:mysql" data-inline="false"></span>MySQL</li>
 								<li><span class="iconify solid feature-icons" data-icon="logos:javascript" data-inline="false"></span>JavaScript</li>
 								<li><span class="iconify solid feature-icons" data-icon="logos:jquery" data-inline="false"></span>JQuery</li>
-
 								<li><span class="iconify solid feature-icons" data-icon="logos:css-3" data-inline="false"></span>CSS3</li>
 								<li><span class="iconify solid feature-icons" data-icon="logos:html-5" data-inline="false"></span>HTML5</li>
 								<li><span class="iconify solid feature-icons" data-icon="logos:git-icon" data-inline="false"></span>Git</li>
@@ -123,12 +122,12 @@
 
 								<section>
 									<header>
-										<h3>Visualization of Visitors to Canada</h3>
-										<p>This app creates data visualization based on json data sets from Statistics Canada Javascript API call and D3.js</p>
+										<h3>Visualization of Canadian Statistics</h3>
+										<p>Data visualization based on JSON and CSV data sets from Statistics Canada, Javascript API and D3.js Javascript library</p>
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="" class="#"><img src="images/api_data_art2.jpg" alt="api_data_art_example" style="width: 600px"/></a>
+											<a href="" class="#"><img src="images/travelerCanadaVisualization.gif" alt="api_data_art_example" style="width: 600px"/></a>
 										</div>
 										<div><a href="https://devneolee.github.io/dataVisualization3/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
@@ -196,10 +195,7 @@
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Justin K Lee. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a><br> Image by <a
-						href="https://pixabay.com/users/CreativeMagic-480360/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3227320">Magic
-						Creative</a> from <a
-						href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3227320">Pixabay</a></div>
+					<div class="copyright">&copy; Justin K Lee. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a><br></div>
 
 			</div>
 
