bar chart axis update

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 							<h2>Who I am</h2>
 						</header>
 						<div class="content">
-							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I care about clean and efficient coding. It will increase performance of the products and shift your projects on the right gear.
-							When I am not working I would spend my time with my lovely family and also exploring streets and corners somewhere on the planet.
+							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I enjoy buidling websites. I cherish learning new technologies and new ideas from the process.
+							When I am not working I spend my time with my lovely family and also enjoy preparing to explore streets and tracks somewhere on the planet again and again.
 							</p>
 							<span class="image main"><img src="images/pic5.JPG" alt="myself_in_India" /></span>
 						</div>
@@ -89,7 +89,7 @@
 								<section>
 									<header>
 										<h3 style = "padding: 2rem 0 0 0">TravelPin</h3>
-										<p>Travel Photo Management App. Keep your travel diary with photos privately or share with friends and families online. Search and retrive your photos without any effort. Help you organize your trip by destination. Sign up, logged in and out session. Inspired by Pintrest. Ruby on Rails Backend. Heroku and Amazon AWS S3.</p>
+										<p>Travel Photo Management App. Keep your travel diary with photos privately or share with friends and families online. Search and retrive your photos without effort. Help you organize your trip by destination. Sign up, logged in and out session. Ruby on Rails Backend and Amazon AWS S3 data storing.</p>
 									</header>
 									<div class="content">
 										<div class="site_frame">
@@ -105,7 +105,7 @@
 								<section>
 									<header>
 										<h3>Yo!Tube</h3>
-										<p>YouTube Cloned App. Search and play your favorite videos from Youtube API. Sign in and log in using different Social Media Accounts including your email. React Front End and Java Script Development.</p>
+										<p>YouTube Cloned project. Search and play your favorite videos from Youtube API. Sign in and log in using different Social Media Accounts including your email. React and Java Script.</p>
 									</header>
 									<div class="content">
 										<div class="#">
@@ -122,12 +122,12 @@
 
 								<section>
 									<header>
-										<h3>Visualization of Canadian Statistics</h3>
-										<p>Data visualization based on JSON and CSV data sets from Statistics Canada, Javascript API and D3.js Javascript library</p>
+										<h3>Travelers to Canada Maps</h3>
+										<p>Data visualization with D3.js, Javascript, and algorithms searching and sorting JSON and CSV data sets from Statistics Canada</p>
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="" class="#"><img src="images/travelerCanadaVisualization.gif" alt="api_data_art_example" style="width: 600px"/></a>
+											<a href="" class="#"><img src="images/travelToCanadaGif.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
 										</div>
 										<div><a href="https://devneolee.github.io/dataVisualization3/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
