update project3 link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="" class="#"><img src="images/travelToCanadaGif.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
+											<a href="" class="https://devneolee.github.io/dataVisualization3/"><img src="images/travelToCanadaGif.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
 										</div>
 										<div><a href="https://devneolee.github.io/dataVisualization3/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
