--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Justin K Lee</h1>
-							<p>Full Stack Engineer who enjoys solving problems and travelling around the world<a href=""></a> 
+							<p>Full Stack Engineer who enjoys solving problems and hiking trails in the nature<a href=""></a> 
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -38,8 +38,8 @@
 							<h2>Who I am</h2>
 						</header>
 						<div class="content">
-							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I enjoy buidling websites. I cherish learning new technologies and new ideas from the process.
-							When I am not working I spend my time with my lovely family and also enjoy preparing to explore streets and tracks somewhere on the planet again and again.
+							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I like buidling websites. I enjoy learning new technologies and ideas from the process.
+							When I am not working I spend my time with my family and also enjoy hiking trails in the nature.
 							</p>
 							<span class="image main"><img src="images/pic5.JPG" alt="myself_in_India" /></span>
 						</div>
@@ -89,7 +89,7 @@
 								<section>
 									<header>
 										<h3 style = "padding: 2rem 0 0 0">TravelPin</h3>
-										<p>Travel Photo Management App. Keep your travel diary with photos privately or share with friends and families online. Search and retrive your photos without effort. Help you organize your trip by destination. Sign up, logged in and out session. Ruby on Rails Backend and Amazon AWS S3 data storing.</p>
+										<p>Travel Photo Management App. Keep your travel diary with photos privately or share with friends and families online. Search and retrive your photos without effort. Help you organize your trip by destination. Authentication with BCrypt hasing. Ruby on Rails Backend and Amazon AWS S3 database.</p>
 									</header>
 									<div class="content">
 										<div class="site_frame">
@@ -105,7 +105,7 @@
 								<section>
 									<header>
 										<h3>Yo!Tube</h3>
-										<p>YouTube Cloned project. Search and play your favorite videos from Youtube API. Sign in and log in using different Social Media Accounts including your email. React and Java Script.</p>
+										<p>YouTube API service app. React state component architecture and asynchronous calls with Java Script. Customized CSS inspired by UI and UX of Youtube.</p>
 									</header>
 									<div class="content">
 										<div class="#">
@@ -123,7 +123,7 @@
 								<section>
 									<header>
 										<h3>Travelers to Canada Maps</h3>
-										<p>Data visualization with D3.js, Javascript, and algorithms searching and sorting JSON and CSV data sets from Statistics Canada</p>
+										<p>Data visualization with D3.js, Javascript, and algorithms searching and sorting large JSON and CSV data sets from Statistics Canada. Interactive geographical map, bar chart and pie chart.</p>
 									</header>
 									<div class="content">
 										<div class="#">
