--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Who I am</h2>
 						</header>
 						<div class="content">
-							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I like buidling websites. I enjoy learning new technologies and ideas from the process.
+							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I like building websites. I enjoy learning new technologies and ideas from the process.
 							When I am not working I spend my time with my family and also enjoy hiking trails in the nature.
 							</p>
 							<span class="image main"><img src="images/pic5.JPG" alt="myself_in_India" /></span>
@@ -89,7 +89,7 @@
 								<section>
 									<header>
 										<h3 style = "padding: 2rem 0 0 0">TravelPin</h3>
-										<p>Travel Photo Management App. Keep your travel diary with photos privately or share with friends and families online. Search and retrive your photos without effort. Help you organize your trip by destination. Authentication with BCrypt hasing. Ruby on Rails Backend and Amazon AWS S3 database.</p>
+										<p>Travel Photo Management App. Keep your travel diary with photos privately or share with friends and families online. Search and retrive your photos without effort. Authentication with BCrypt hasing. Ruby on Rails Backend and Amazon AWS S3 database.</p>
 									</header>
 									<div class="content">
 										<div class="site_frame">
