--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="#" class="#"><img src="images/yoTube.gif" alt="yoTube_screenshot" style="width: 600px;" /></a>
+											<a href="https://nameless-tor-08849.herokuapp.com/" target="_blank"><img src="images/yoTube.gif" alt="yoTube_screenshot" style="width: 600px;" /></a>
 										</div>
-										<div><a href="#" target="_blank">
+										<div><a href="https://nameless-tor-08849.herokuapp.com/" target="_blank">
 											<strong><p>Live Site(under construction)</p></strong></a></div>
 										<div>
-											<a href="#" target="_blank">
+											<a href="https://github.com/DevNeoLee/Yo-Tube" target="_blank">
 											<strong><p>GitHub Repository(under construction)</p></strong></a>
 										</div>
 									</div>
@@ -127,7 +127,7 @@
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="" class="https://devneolee.github.io/dataVisualization3/"><img src="images/travelToCanadaGif.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
+											<a href="https://devneolee.github.io/dataVisualization3/"  target="_blank"><img src="images/travelToCanadaGif.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
 										</div>
 										<div><a href="https://devneolee.github.io/dataVisualization3/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
