Update d3project link

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="https://devneolee.github.io/dataVisualization3/"  target="_blank"><img src="images/travelToCanadaGif.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
+											<a href="https://devneolee.github.io/DataVisualization4/"  target="_blank"><img src="images/travelToCanadaGif.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
 										</div>
-										<div><a href="https://devneolee.github.io/dataVisualization3/" target="_blank">
+										<div><a href="https://devneolee.github.io/DataVisualization4/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
 										<div>
-											<a href="https://github.com/DevNeoLee/dataVisualization3" target="_blank">
+											<a href="https://github.com/DevNeoLee/DataVisualization4" target="_blank">
 											<strong><p>GitHub Repository</p></strong></a>
 										</div>
 									</div>
