add new gif travelCanada

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="https://devneolee.github.io/DataVisualization4/"  target="_blank"><img src="images/travelCanada.gif.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
+											<a href="https://devneolee.github.io/DataVisualization4/"  target="_blank"><img src="images/travelCanadaHorizontalScreenS.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
 										</div>
 										<div><a href="https://devneolee.github.io/DataVisualization4/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
