change order of project links html

--- a/index.html
+++ b/index.html
@@ -93,29 +93,11 @@
 									</header>
 									<div class="content">
 										<div class="site_frame">
-											<a href="https://travel-pin.herokuapp.com/" target="_blank"><img src="images/travelpin2.gif" alt="travelpin_screenshot" style="width: 600px; " /></a>
+											<a href="https://travel-pin.herokuapp.com/" target="_blank"><img src="images/travel_pin_ss_.gif" alt="travelpin_screenshot" style="width: 600px; " /></a>
 										</div>
 										<div><a href="https://travel-pin.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
 										<div>
 											<a href="https://github.com/DevNeoLee/TravelPin" target="_blank"><strong><p>GitHub Repository</p></strong></a>
-										</div>
-									</div>
-								</section>
-
-								<section>
-									<header>
-										<h3>Yo!Tube</h3>
-										<p>YouTube API service app. React state component architecture and asynchronous calls with Java Script. Customized CSS inspired by UI and UX of Youtube.</p>
-									</header>
-									<div class="content">
-										<div class="#">
-											<a href="https://nameless-tor-08849.herokuapp.com/" target="_blank"><img src="images/yoTube.gif" alt="yoTube_screenshot" style="width: 600px;" /></a>
-										</div>
-										<div><a href="https://nameless-tor-08849.herokuapp.com/" target="_blank">
-											<strong><p>Live Site(under construction)</p></strong></a></div>
-										<div>
-											<a href="https://github.com/DevNeoLee/Yo-Tube" target="_blank">
-											<strong><p>GitHub Repository(under construction)</p></strong></a>
 										</div>
 									</div>
 								</section>
@@ -127,16 +109,41 @@
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="https://devneolee.github.io/DataVisualization4/"  target="_blank"><img src="images/gifTravel2.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
+											<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/"  target="_blank"><img src="images/gifTravel2.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
 										</div>
-										<div><a href="https://devneolee.github.io/DataVisualization4/" target="_blank">
+										<div><a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
 										<div>
-											<a href="https://github.com/DevNeoLee/DataVisualization4" target="_blank">
+											<a href="https://github.com/DevNeoLee/Canada_Tourist_Chart_d3" target="_blank">
 											<strong><p>GitHub Repository</p></strong></a>
 										</div>
 									</div>
 								</section>
+
+									<section>
+										<header>
+											<h3>Yo!Tube</h3>
+											<p>YouTube API service app. React state component architecture and asynchronous calls with Java Script.
+												Customized CSS inspired by UI and UX of Youtube.</p>
+										</header>
+										<div class="content">
+											<div class="#">
+												<a href="https://nameless-tor-08849.herokuapp.com/" target="_blank"><img src="images/yoTube.gif"
+														alt="yoTube_screenshot" style="width: 600px;" /></a>
+											</div>
+											<div><a href="https://nameless-tor-08849.herokuapp.com/" target="_blank">
+													<strong>
+														<p>Live Site(under construction)</p>
+													</strong></a></div>
+											<div>
+												<a href="https://github.com/DevNeoLee/Yo-Tube" target="_blank">
+													<strong>
+														<p>GitHub Repository(under construction)</p>
+													</strong></a>
+											</div>
+										</div>
+									</section>
+
 
 						</div>
 					</section>
