add new gif d3 project

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									</header>
 									<div class="content">
 										<div class="#">
-											<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/"  target="_blank"><img src="images/gifTravel2.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
+											<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/"  target="_blank"><img src="images/travel_data_d3.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
 										</div>
 										<div><a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank">
 											<strong><p>Live Site</p></strong></a></div>
@@ -143,8 +143,6 @@
 											</div>
 										</div>
 									</section>
-
-
 						</div>
 					</section>
 
