update description link status

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 											<div>
 												<a href="https://github.com/DevNeoLee/Yo-Tube" target="_blank">
 													<strong>
-														<p>GitHub Repository(under construction)</p>
+														<p>GitHub Repository</p>
 													</strong></a>
 											</div>
 										</div>
