update content paragraph

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<section>
 									<header>
 										<h3 style = "padding: 2rem 0 0 0">TravelPin</h3>
-										<p>Travel Photo Management App. Keep your travel photos and share with friends and families online. Search and retrive your photos without effort. Authentication with BCrypt hasing. Ruby on Rails Backend and Amazon AWS S3 database.</p>
+										<p>Travel Photo Management App. Organize your travel photos and share with friends and families online. Search and retrive your photos without effort. Authentication with BCrypt hasing. Ruby on Rails Backend and Amazon AWS S3 database.</p>
 									</header>
 									<div class="content">
 										<div class="site_frame">
