update on project1 sharedesk and add gif of it

--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3 style = "padding: 2rem 0 0 0">TravelPin</h3>
-										<p>Travel Photo Management App. Organize your travel photos and share with friends and families online. Search and retrive your photos without effort. Authentication with BCrypt hasing. Ruby on Rails Backend and Amazon AWS S3 database.</p>
+										<h3 style = "padding: 2rem 0 0 0">Share Desk</h3>
+										<p>Share Desk App. Find work space any city around the world instantly. Host space in your house, apartment, or office for profit. Ruby on Rails Backend, Turbolink and Stimulus.js Ajax calls, Javascript, Bootstrap, Jquery DOM manipulation, Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode, Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching, Customer Star Rating, and Amazon AWS S3 database. Responsive flex and grid design, Inspired by WeWork and Air B&B.</p>
 									</header>
 									<div class="content">
 										<div class="site_frame">
-											<a href="https://travel-pin.herokuapp.com/" target="_blank"><img src="images/travel_pin_ss_.gif" alt="travelpin_screenshot" style="width: 600px; " /></a>
+											<a href="https://fathomless-sands-44020.herokuapp.com/" target="_blank"><img src="images/share_desk.gif" alt="Sharedesk_screenshot" style="width: 600px; " /></a>
 										</div>
-										<div><a href="https://travel-pin.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
+										<div><a href="https://fathomless-sands-44020.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
 										<div>
-											<a href="https://github.com/DevNeoLee/TravelPin" target="_blank"><strong><p>GitHub Repository</p></strong></a>
+											<a href="https://github.com/DevNeoLee/sharedesk" target="_blank"><strong><p>GitHub Repository</p></strong></a>
 										</div>
 									</div>
 								</section>
