--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 									</header>
 									<div class="content">
 										<div class="site_frame">
-											<a href="https://fathomless-sands-44020.herokuapp.com/" target="_blank"><img src="images/share_desk.gif" alt="Sharedesk_screenshot" style="width: 600px; " /></a>
+											<a href="https://deskshare-app.herokuapp.com/" target="_blank"><img src="images/share_desk.gif" alt="Sharedesk_screenshot" style="width: 600px; " /></a>
 										</div>
-										<div><a href="https://fathomless-sands-44020.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
+										<div><a href="https://deskshare-app.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
 										<div>
 											<a href="https://github.com/DevNeoLee/sharedesk" target="_blank"><strong><p>GitHub Repository</p></strong></a>
 										</div>
