--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<section>
 									<header>
 										<h3 style = "padding: 2rem 0 0 0">Share Desk</h3>
-										<p>Share Desk App. Find work space any city around the world instantly. Host space in your house, apartment, or office for profit. Ruby on Rails Backend, Turbolink and Stimulus.js Ajax calls, Javascript, Bootstrap, Jquery DOM manipulation, Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode, Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching, Customer Star Rating, and Amazon AWS S3 database. Responsive flex and grid design, Inspired by WeWork and Air B&B.</p>
+										<p>Share Desk App. Find work space any city around the world instantly. Host space in your house, apartment, or office for profit. Ruby on Rails Backend, Turbolink and Stimulus.js Ajax calls for infinite scrolling, Javascript, Bootstrap, Jquery DOM manipulation, Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode, Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching, Customer Star Rating, and Amazon AWS S3 database. Responsive flex and grid design, Inspired by WeWork and Air B&B.</p>
 									</header>
 									<div class="content">
 										<div class="site_frame">
